Add OpenStack link.

--- a/links.html
+++ b/links.html
@@ -7,6 +7,9 @@
     <p>Links</p>
     <div id="links-data">
       <div class="link">
+        <a href="https://openstack.adelaide.edu.au/dashboard/project/">OpenStack - UoA</a>
+      </div>
+      <div class="link">
         <a href="https://nexus.adelaide.edu.au/nexus/content/sites/uoa/au/edu/adelaide/integration/archetype/simple-springboot-app-archetype/">simple-springboot-app-archetype (nexus site doco)</a>
       </div>
       <div class="link">
