Add OpenShift Dev links.

--- a/links.html
+++ b/links.html
@@ -7,6 +7,12 @@
     <p>Links</p>
     <div id="links-data">
       <div class="link">
+        <a href="https://rhosd-console.services.adelaide.edu.au:8443/console/projects">OpenShift Dev all projects</a>
+      </div>
+      <div class="link">
+        <a href="https://rhosd-console.services.adelaide.edu.au:8443/console/project/a1035891/overview">OpenShift Dev a1035891 overview</a>
+      </div>
+      <div class="link">
         <a href="https://openstack.adelaide.edu.au/dashboard/project/">OpenStack - UoA</a>
       </div>
       <div class="link">
