Add Staff Services Online link.

--- a/links.html
+++ b/links.html
@@ -21,6 +21,9 @@
       <div class="link">
         <a href="https://smtp-trap.adelaide.edu.au">smtp-trap (MailCatcher)</a>
       </div>
+      <div class="link">
+        <a href="https://sso.adelaide.edu.au">Staff Services Online</a>
+      </div>
     </div>
   </body>
 </html>
