--- a/links.html
+++ b/links.html
@@ -24,6 +24,9 @@
       <div class="link">
         <a href="https://sso.adelaide.edu.au">Staff Services Online</a>
       </div>
+      <div class="link">
+        <a href="https://wiki.adelaide.edu.au/its/System_Integration">System Integration wiki page</a>
+      </div>
     </div>
   </body>
 </html>
